@@ -212,9 +212,17 @@ class OpenSSL::TestX509Store < Test::Unit::TestCase
     crl2 = issue_crl(revoke_info, 2, now+1800, now+3600, [],
                      ca1_cert, @rsa2048, OpenSSL::Digest::SHA1.new)
     store.add_crl(crl1)
-    assert_raise(OpenSSL::X509::StoreError){
-      store.add_crl(crl2) # add CRL issued by same CA twice.
-    }
+    if /0\.9\.8.*-rhel/ =~ OpenSSL::OPENSSL_VERSION
+      # RedHat is distributing a patched version of OpenSSL that allows
+      # multiple CRL for a key (multi-crl.patch)
+      assert_nothing_raised do
+        store.add_crl(crl2) # add CRL issued by same CA twice.
+      end
+    else
+      assert_raise(OpenSSL::X509::StoreError){
+        store.add_crl(crl2) # add CRL issued by same CA twice.
+      }
+    end
   end
 end
 
